tests/invalid/static_array_index_out_of_range.wio
fn Entry() -> i32 {
    let values: [i32; 2] = [1, 2];
    return values[2usize];
}
